# ghc-multirec

./: README.md  ghc-multirec.cabal
examples/: .ghci  Foo.hs  main-ann.hs  main-ghc.hs
src/Generics/MultiRec/GHC/: .ghci  GHCTHUseAlt.hs  GHCTHUseAlt2.hs  Instances.hs
