name:                ghc-multirec
version:             0.1.0.0
synopsis:            MultiRec instances for GHC AST to allow MultiRec Zipper
-- description:         
homepage:            https://github.com/alanz/ghc-multirec
license:             PublicDomain
license-file:        LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com
-- copyright:           
category:            Generics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


-- library
--   -- exposed-modules:     
--   -- other-modules:       
--   -- other-extensions:    
--   build-depends:       base >=4.6 && <4.7
--                       , multirec
--                       , multirec-alt-deriver
--                       , zipper
--                       , ghc
--                       , ghc-paths
--                       , ghc-prim
--                       , ghc-syb-utils
--                       , syb
--                       , directory
--   hs-source-dirs:      ./src
--   default-language:    Haskell2010

executable ghc-zipper
  main-is:             main-ghc.hs
  build-depends:       base >=4.6 && <4.7
                      , multirec
                      , multirec-alt-deriver
                      , zipper
                      , ghc
                      , ghc-paths
                      , ghc-prim
                      , ghc-syb-utils
                      , syb
                      , directory

  hs-source-dirs:      ./src
                       ./examples
  default-language:    Haskell2010